--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,8 +26,10 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 350px;
   min-height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 h1 {
