--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #b6b6b6;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #c8cbff;
 }
 
 body {
