--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -47,6 +47,10 @@ h1 {
   transform: translateY(-6px);
   box-shadow: 0 0.75rem 1.5rem rgba(0, 0, 0, 0.1);
 }
+.container {
+  /* margin-top: 4rem; */
+  min-width: 100vw;
+}
 
 button {
   border-radius: 8px;
