--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,14 +26,15 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex; */
   place-items: center;
-  min-width: 350px;
+  /* min-width: 350px; */
+  width: 100vw;
   min-height: 100vh;
   align-items: center;
   /* justify-content: center; */
 }
-
+/*  */
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
